# qubitrefill

./: .mcp.json.example  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: pages.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/src/backend/: cli.py  config.py
backend/src/backend/api/: app.py  auth.py  routes.py  schemas.py  ws.py
backend/src/backend/db/: __init__.py  engine.py  models.py
backend/src/backend/email/: __init__.py  sender.py
backend/src/backend/events/: bus.py  feeds.py
backend/src/backend/financial/: basket.py  pnl.py  qubo_decoder.py  qubo_encoder.py  slider_map.py  types.py
backend/src/backend/financial/estimators/: covariance.py  expected_return.py
backend/src/backend/financial/prices/: assets_api.py  base.py  source.py  synthetic.py
backend/src/backend/orchestration/: digest_scheduler.py  job.py  scheduler.py
backend/src/backend/persistence/: agents.py  jobs.py  leaderboard.py
backend/src/backend/reporting/: __init__.py  registrations.py
backend/src/backend/solvers/: feasibility.py  router.py  sampling.py  types.py
backend/src/backend/solvers/providers/: dwave.py  gurobi.py  sa.py
backend/tests/: conftest.py  test_api.py  test_assets_api.py  test_digest.py  test_dwave.py  test_email.py  test_estimators.py  test_feasibility.py  test_job_pipeline.py  test_persistence.py  test_pnl.py  test_qubo_encoder.py  test_qubo_roundtrip.py  test_slider_map.py  test_solvers_synthetic.py  test_synthetic_market.py
docs/: api-key-postgres-plan.md  deployment-prep.md  pay-with-loser-plan.md
docs/superpowers/plans/: 2026-06-25-degame-qupick-mcp.md
docs/superpowers/specs/: 2026-06-22-fluent-qupick-funding-design.md
site/: index.html
skills/pay-with-loser/: SKILL.md
skills/qupick/: SKILL.md  config.example.json
